--- a/source/_includes/custom/navigation.html
+++ b/source/_includes/custom/navigation.html
@@ -8,7 +8,7 @@
                 <span class="icon-bar"></span>
 
             </button>
-            <a class="navbar-brand" href="{{ root_url }}/">{{ site.title }}</a>
+            <a class="navbar-brand" href="{{ root_url }}/"><strong>{{ site.title }}</strong></a>
         </div>
 
         <div class="navbar-collapse collapse">
