--- a/source/_includes/custom/navigation.html
+++ b/source/_includes/custom/navigation.html
@@ -25,19 +25,28 @@
             </ul>
             <ul class="nav navbar-nav navbar-right">
                 <li>
-                    <a class="subscribe-rss" href="{{ site.subscribe_rss }}" title="subscribe via RSS">
-                        <span class="visible-xs">RSS</span>
-                        <img class="hidden-xs" src="{{ root_url }}/images/rss.png" alt="RSS">
+                    <a href="/search" >{% icon fa-search %}</a>
+                </li>
+                <li>
+                    <a  href="{{ site.subscribe_rss }}" title="subscribe via RSS">
+                        {% icon fa-rss %}
                     </a>
                 </li>
                 {% if site.subscribe_email %}
                 <li>
+
                     <a class="subscribe-email" href="{{ site.subscribe_email }}" title="subscribe via email">
                         <span class="visible-xs">Email</span>
                         <img class="hidden-xs" src="{{ root_url }}/images/email.png" alt="Email">
                     </a>
                 </li>
                 {% endif %}
+                <li>
+                    <a id="sidebar-toggle" href="#"> 
+                        {% icon fa-toggle-on %}
+                        {% icon fa-toggle-off %}
+                    </a>
+                </li>
             </ul>
             {% if site.simple_search %}
                 <form class="search navbar-form navbar-right" action="{{ site.simple_search }}" method="GET">
@@ -48,14 +57,12 @@
                 </form>
             {% endif %}
             {% if site.static_search %} 
-                   <a href="/search" class="btn btn-default navbar-btn pull-right"><span class="glyphicon glyphicon-search"> </span></a>
                 <form class="search navbar-form navbar-right">
                     <div class="form-group">
 
-                    <input id="navbar-search-query" type="text" class="form-control" name="q" placeholder="Search" autocomplete="off">
-                    </div>
-         
+                    <input type="text" id="navbar-search-query"  class="form-control" name="q" placeholder="Search" autocomplete="off">
 
+                    </div>
                 </form>
             {% endif %}
         </div>
