--- a/source/_layouts/default.html
+++ b/source/_layouts/default.html
@@ -4,6 +4,7 @@
       <header role="banner">
         {% include navigation.html %}
       </header>
+
       <div id="main" class="container">
         <div id="content">
           {{ content | expand_urls: root_url }}
@@ -12,11 +13,25 @@
     </div>
     <script type="text/javascript">
     $(function() {
+ 
       $('#navbar-search-query').lunrSearch({
         indexUrl: '/search.json',             // URL of the `search.json` index data for your site
         results:  '#aside-search-results',          // jQuery selector for the search results container
         entries:  '.aside-entries',                 // jQuery selector for the element to contain the results list, must be a child of the results element above.
         template: '#aside-search-results-template'  // jQuery selector for the Mustache.js template
+      });
+      $('#sidebar-toggle').click(function() {
+        $('.sidebar').toggleClass('toggled');
+        $(this).toggleClass('toggled');
+        if ($('.sidebar').hasClass('toggled')) {
+              $('.page-content').removeClass('col-md-9');
+              $('.page-content').addClass('col-md-offset-2');
+              $('.page-content').addClass('col-md-8');
+        } else {
+           $('.page-content').removeClass('col-md-8');
+              $('.page-content').removeClass('col-md-offset-2');
+              $('.page-content').addClass('col-md-9');
+        }
       });
     });
     </script>
