--- a/sass/custom/_typography.scss
+++ b/sass/custom/_typography.scss
@@ -11,6 +11,7 @@ h1, h2, h3, {
     @media only screen and (min-width: 768px) {
         font-size: 16px;
     }
+    font-family: 'proxima-nova', "Helvetica Neue", Helvetica, Arial, sans-serif
 }
 
 q {
