--- a/source/_includes/custom/asides/category_list.html
+++ b/source/_includes/custom/asides/category_list.html
@@ -7,7 +7,7 @@
     {% capture category_url %}/{{ site.category_dir }}/{{ category | first | slugize | downcase | replace:' ','-' | append:'/index.html'}}{% endcapture %}
     <a class="list-group-item {% if category_url == page.url %}active{% endif %}" href="{{ root_url | append:category_url }}">
         <span class="badge">{{ category | last | size }}</span>
-        {{ category | first }}
+        <strong>{{ category | first }}</strong>
       </a>
     {% endfor %}
   </div>
