--- a/source/_includes/custom/head.html
+++ b/source/_includes/custom/head.html
@@ -1,4 +1,7 @@
-<script src="{{ root_url }}/javascripts/libs/jquery/jquery-2.0.3.min.js"></script>
-
-<link href="{{ root_url }}/assets/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" type="text/css">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
 <link href="{{ root_url }}/assets/bootstrap/dist/css/bootstrap-theme.min.css" rel="stylesheet" type="text/css">
+	
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
+<script src="http://cdn.virtuosoft.eu/virtuosoft.eu/resources/jquery.bootstrap-autohidingnavbar.min.js"></script>
+
