--- a/source/_layouts/post.html
+++ b/source/_layouts/post.html
@@ -5,7 +5,7 @@ single: true
 ---
 
 <div class="row">
-  <div class="page-content {% unless page.sidebar == false or site.post_asides == empty and site.default_asides == empty %}col-md-9{% else %}col-md-12{% endunless %}" itemscope itemtype="http://schema.org/Blog">
+  <div class="page-content col-md-offset-2 {% unless page.sidebar == false or site.post_asides == empty and site.default_asides == empty %}col-md-8{% else %}col-md-12{% endunless %}" itemscope itemtype="http://schema.org/Blog">
     <meta itemprop="name" content="{{site.title}}" />
     {% if site.description %}<meta itemprop="description" content="{{site.description}}" />{% endif %}
     <meta itemprop="url" content="{{site.url}}" />
@@ -48,7 +48,7 @@ single: true
   </div>
 
   {% unless page.sidebar == false or site.post_asides == empty and site.default_asides == empty %}
-  <aside class="sidebar col-md-3">
+  <aside class="sidebar col-md-3 toggled" >
     {% if site.post_asides.size %}
       {% include_array post_asides %}
     {% else %}
