--- a/source/_includes/article.html
+++ b/source/_includes/article.html
@@ -1,12 +1,13 @@
 {% unless page.no_header %}
   <header class="page-header">
     {% unless page.meta == false %}
-      <p class="meta text-muted text-uppercase">
+      <p class="meta text-muted">
         {% include post/date.html %}{{ time }}
         {% if site.disqus_short_name and page.comments != false and post.comments != false and site.disqus_show_comment_count == true %}
            | <a href="{% if index %}{{ root_url }}{{ post.url }}{% endif %}#disqus_thread" itemprop="discussionUrl"
              data-disqus-identifier="{% if post.meta.disqus_id %}{{ post.meta.disqus_id }}{% else %}{{ site.url }}{{ post.url }}{% endif %}">Comments</a>
         {% endif %}
+        &bull;
         {% include post/categories.html %}
 
       </p>
