--- a/source/_includes/custom/navigation.html
+++ b/source/_includes/custom/navigation.html
@@ -6,7 +6,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
-
+                <span class="icon-bar"></span>
             </button>
             <a class="navbar-brand" href="{{ root_url }}/"><strong>{{ site.title }}</strong></a>
         </div>
@@ -21,6 +21,9 @@
                 </li>
                  <li {% if page.navbar == 'Tags' %}class="active"{% endif %}>
                     <a href="{{ root_url }}/tags/">Tags</a>
+                </li>
+                 <li {% if page.navbar == 'About' %}class="active"{% endif %}>
+                    <a href="{{ root_url }}/about/">About</a>
                 </li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
