--- a/sass/custom/_styles.scss
+++ b/sass/custom/_styles.scss
@@ -12,8 +12,21 @@ html, body {
   margin: 0 auto -60px;
   /* Pad bottom by footer height */
   padding: 0 0 60px;
+
+  #main {
+    padding-top: 90px;
+  }
+  .navbar-fixed-top {
+    border-top: 5px solid #4582ec;
+  }
 }
 
+article.hentry, article.post  {
+  border: 1px solid #e9e9e9;
+  padding: 20px;
+  margin-bottom: 20px;
+  margin-top: auto;
+}
 /* Set the fixed height of the footer here */
 footer[role=contentinfo] {
     height: 60px;
@@ -30,7 +43,6 @@ footer[role=contentinfo] {
 #sidebar-toggle:hover .fa-toggle-on {
     display: inline;
 }
-
 #sidebar-toggle.toggled .fa-toggle-on {
     display: none;
 };
