--- a/source/_layouts/default.html
+++ b/source/_layouts/default.html
@@ -1,5 +1,5 @@
 {% capture root_url %}{{ site.root | strip_slash }}{% endcapture %}{% include head.html %}
-  <body style="padding-top:90px" {% if page.body_id %} id="{{ page.body_id }}" {% endif %} {% if page.sidebar == false %} class="no-sidebar" {% endif %} {% if page.sidebar == 'collapse' or site.sidebar == 'collapse' %} class="collapse-sidebar sidebar-footer" {% endif %}>
+  <body  {% if page.body_id %} id="{{ page.body_id }}" {% endif %} {% if page.sidebar == false %} class="no-sidebar" {% endif %} {% if page.sidebar == 'collapse' or site.sidebar == 'collapse' %} class="collapse-sidebar sidebar-footer" {% endif %}>
     <div id="wrap">
       <header role="banner">
         {% include navigation.html %}
