--- a/source/_layouts/post.html
+++ b/source/_layouts/post.html
@@ -39,7 +39,7 @@ single: true
         {% endif %}
       </footer>
     </article>
-
+    {% include post/related_posts.html %}
     {% if site.disqus_short_name and page.comments == true %}
       <section>
         <h1>Comments</h1>
