--- a/source/_includes/asides/github.html
+++ b/source/_includes/asides/github.html
@@ -4,7 +4,7 @@
       <h3 class="panel-title">GitHub Repos</h3>
   </div>
   <div class="list-group" id="gh_repos">
-    <p class="loading">Status updating...</p>
+    <p class="loading alert alert-warning">Status updating...</p>
   </div>
   {% if site.github_show_profile_link %}
     <div class="gh-profile-link pull-right text-muted">
