--- a/source/_includes/custom/navigation.html
+++ b/source/_includes/custom/navigation.html
@@ -31,6 +31,11 @@
                     <a href="/search" >{% icon fa-search %}</a>
                 </li>
                 <li>
+                    <a href="https://github.com/{{site.github_user}}">
+                        {% icon fa-github %}
+                    </a>
+                </li>
+                <li>
                     <a  href="{{ site.subscribe_rss }}" title="subscribe via RSS">
                         {% icon fa-rss %}
                     </a>
