--- a/source/_includes/post/related_posts.html
+++ b/source/_includes/post/related_posts.html
@@ -1,4 +1,5 @@
 {% if site.related_posts %}
+<div class="related-posts">
   <h3>Related posts</h3>
   <ul class="posts">
   {% for post in site.related_posts limit:3 %}
@@ -7,4 +8,5 @@
     </li>
   {% endfor %}
   </ul>
+</div>
 {% endif %}
