--- a/source/_layouts/post.html
+++ b/source/_layouts/post.html
@@ -39,14 +39,16 @@ single: true
         {% endif %}
       </footer>
     </article>
-    {% include post/related_posts.html %}
     {% if site.disqus_short_name and page.comments == true %}
       <section>
         <h1>Comments</h1>
         <div id="disqus_thread" aria-live="polite">{% include post/disqus_thread.html %}</div>
       </section>
+    {% include post/related_posts.html %}
+      
     {% endif %}
   </div>
+  {% include post/toc.html %}
   
   {% unless page.sidebar == false or site.post_asides == empty and site.default_asides == empty %}
   <aside class="col-md-3 sidebar toggled" >
