--- a/source/_includes/asides/github.html
+++ b/source/_includes/asides/github.html
@@ -16,7 +16,7 @@
         if (!window.jXHR){
             var jxhr = document.createElement('script');
             jxhr.type = 'text/javascript';
-            jxhr.src = '{{ root_url}}/javascripts/libs/jXHR.js';
+            jxhr.src = '{{ root_url}}/assets/javascripts/libs/jXHR.js';
             var s = document.getElementsByTagName('script')[0];
             s.parentNode.insertBefore(jxhr, s);
         }
@@ -29,6 +29,6 @@
         });
     });
   </script>
-  <script src="{{ root_url }}/javascripts/github.js" type="text/javascript"> </script>
+  <script src="{{ root_url }}/assets/javascripts/github.js" type="text/javascript"> </script>
 </section>
 {% endif %}
