--- a/source/_layouts/default.html
+++ b/source/_layouts/default.html
@@ -54,7 +54,7 @@
     <script type="text/javascript">
     $(".navbar-fixed-top").autoHidingNavbar();
     </script>
-    <script src="{{ root_url }}/javascripts/search.min.js" type="text/javascript" charset="utf-8"></script>
+  <script src="{{ root_url }}/assets/javascripts/search.min.js" type="text/javascript" charset="utf-8"></script>
 
     <footer role="contentinfo">{% include footer.html %}</footer>
     {% include after_footer.html %}
