--- a/source/_includes/post/toc.html
+++ b/source/_includes/post/toc.html
@@ -8,11 +8,11 @@
     </div>
         </div>
 
-      <ul id="toc-body" class="toggled" >
+      <div id="toc-body" class="toggled" >
       {% for content in page.contents %}
-        <li><a  class="list-group-item" style="cursor: pointer;" href="#{{ content | downcase | replace: ' ','-' }}">{{ content }}</a></li>{% unless forloop.last %}
+        <a  class="list-group-item" style="cursor: pointer;" href="#{{ content | downcase | replace: ' ','-' }}">{{ content }}</a>{% unless forloop.last %}
           {% endunless %}
       {% endfor %}
-     </ul>
+     </div>
 </div>
 {% endif %}
