--- a/source/_layouts/default.html
+++ b/source/_layouts/default.html
@@ -53,7 +53,8 @@
     </script>
     <script type="text/javascript">
     $(".navbar-fixed-top").autoHidingNavbar();
-    
+    $('body').particleground();
+
     </script>
   <script src="{{ root_url }}/assets/javascripts/search.min.js" type="text/javascript" charset="utf-8"></script>
 
