--- a/source/_includes/custom/head.html
+++ b/source/_includes/custom/head.html
@@ -2,4 +2,5 @@
 <script src="{{ root_url }}/assets/javascripts/libs/jquery/jquery-2.0.3.min.js"></script>
 <script src="{{ root_url }}/assets/bootstrap/dist/js/bootstrap.min.js"></script>
 <script src="{{ root_url }}/assets/jquery.bootstrap-autohidingnavbar.min.js"></script>
+<script src="{{ root_url }}/assets/javascripts/jquery.particleground.min.js"></script>
 
