--- a/source/_includes/custom/after_footer.html
+++ b/source/_includes/custom/after_footer.html
@@ -1,2 +1,3 @@
-<script src="{{ root_url }}/assets/bootstrap/dist/js/bootstrap.min.js"></script>
 <script src="{{ root_url }}/assets/javascripts/modernizr-2.0.js"></script>
+<script src="{{ root_url }}/assets/javascripts/search.min.js" type="text/javascript" charset="utf-8"></script>
+<script src="{{ root_url }}/assets/bootstrap/dist/js/bootstrap.min.js"></script>
