--- a/source/_includes/article.html
+++ b/source/_includes/article.html
@@ -10,7 +10,7 @@
         &bull;
         {% include post/categories.html %}
 
-      </p>
+      </p>  
 
     {% endunless %}
     {% if index %}
@@ -32,9 +32,9 @@
   {% capture excerpted %}{{ content | has_excerpt }}{% endcapture %}
   {% if excerpted == 'true' %}
     <footer>
-      <a class="btn btn-default" href="{{ root_url }}{{ post.url }}">{{ site.excerpt_link }}</a>
+      <a class="btn btn-success" href="{{ root_url }}{{ post.url }}">{{ site.excerpt_link }}</a>
     </footer>
   {% endif %}
 {% else %}
-<div class="entry-content clearfix" itemprop="articleBody description">{{ content }}</div>
+<div class="entry-content clearfix" itemprop="articleBody description"  >{{ content }}</div>
 {% endif %}
