--- a/source/_includes/custom/head.html
+++ b/source/_includes/custom/head.html
@@ -1,6 +1,5 @@
+<link href="{{ root_url }}/assets/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" type="text/css">
 <link href="{{ root_url }}/assets/bootstrap/dist/css/bootstrap-theme.min.css" rel="stylesheet" type="text/css">
-<script src="{{ root_url }}/assets/javascripts/libs/jquery/jquery-2.0.3.min.js"></script>
+<script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 <script src="{{ root_url }}/assets/bootstrap/dist/js/bootstrap.min.js"></script>
 <script src="{{ root_url }}/assets/jquery.bootstrap-autohidingnavbar.min.js"></script>
-<script src="{{ root_url }}/assets/javascripts/jquery.particleground.min.js"></script>
-
