--- a/sass/custom/_styles.scss
+++ b/sass/custom/_styles.scss
@@ -4,9 +4,11 @@ html, body {
   height: 100%;
 
   .navbar-nav > li > a:hover {
-    border: 1px solid #4582ec !important;
+    border: 2px solid #4582ec;
   }
-  
+  .read-more-btn:hover {
+    border: 2px solid #4582ec;
+  } 
 
   /* The html and body elements cannot have any padding or margin. */
 }
