--- a/source/_includes/article.html
+++ b/source/_includes/article.html
@@ -32,7 +32,7 @@
   {% capture excerpted %}{{ content | has_excerpt }}{% endcapture %}
   {% if excerpted == 'true' %}
     <footer>
-      <a class="btn btn-success" href="{{ root_url }}{{ post.url }}">{{ site.excerpt_link }}</a>
+      <a class="btn btn-default read-more-btn" href="{{ root_url }}{{ post.url }}">{{ site.excerpt_link }}</a>
     </footer>
   {% endif %}
 {% else %}
