--- a/source/_includes/custom/head.html
+++ b/source/_includes/custom/head.html
@@ -3,4 +3,4 @@
 <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 <script src="{{ root_url }}/assets/bootstrap/dist/js/bootstrap.min.js"></script>
 <script src="{{ root_url }}/assets/jquery.bootstrap-autohidingnavbar.min.js"></script>
-<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.26/angular.min.js"></script>
+<script src="{{ root_url }}/assets/javascripts/pace.min.js"></script>
